--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,7 +7,7 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Serif');
 
 body {
-    background-color: #e3d5b8;
+    background-color: red;
 }
 
 .header {
